# dif17-analysis-agreement

./: Jenkinsfile  create_table.py  main.py  pyproject.toml  run_streamlit.py
config/: dbConfig.py
front/: main.py
redis_config/: openai_file_redis.py
router/: analysis.py  gptChat.py
vo/: CustomResponse.py  InsuranceItemQueryParams.py
